fixed a problem with vertical-alignment in IE7. refs #812

--- a/media/css/style-ie7.css
+++ b/media/css/style-ie7.css
@@ -21,3 +21,8 @@ p.items-per-page {
 ul.pages {
     padding-top: 10px !important;
 }
+
+#tag-model-left {
+    vertical-align: baseline !important;
+    margin-right: 5px;
+}
